--- a/sections/index-spacer.liquid
+++ b/sections/index-spacer.liquid
@@ -1,4 +1,4 @@
-<hr class="{% if section.settings.invisible == true %}invisible {% endif %}py-{{ section.settings.size }} m-0"{% if section.settings.background_color != empty %} style="background-color: {{ section.settings.background_color }};"{% endif %}>
+<hr class="{% if section.settings.invisible == true %}invisible {% endif %}py-{{ section.settings.size }} m-0"{% if section.settings.background_color != empty %} style="background-color: {{ section.settings.background_color }}; opacity: 1;"{% endif %}>
 
 {% schema %}
 {
