--- a/sections/layout-announcement-bar.liquid
+++ b/sections/layout-announcement-bar.liquid
@@ -1,5 +1,5 @@
 {% if section.settings.show %}
-<div class="announcement_bar{% if template.name != 'index' %} mb-3{% endif %}" style="background-color: {{ section.settings.background_colour }};">
+<div class="announcement_bar" style="background-color: {{ section.settings.background_colour }};">
   <div class="container">
     <a href="{{ section.settings.cta_url }}" style="color: {{ section.settings.text_colour }};" class="announcement_bar__text d-block py-2 lh-sm text-center text-decoration-none"><small>{{ section.settings.text }} <span class="text-decoration-underline">{{ section.settings.cta_label }}</span></small></a>
   </div>
