--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row mb-3">
 
-    {% render 'account-nav.liquid' %}
+    {% render 'account-nav' %}
 
     <h2 class="mb-3">Welcome back, {{ customer.first_name | capitalize }}</h2>
 
