--- a/sections/index-testimonials.liquid
+++ b/sections/index-testimonials.liquid
@@ -6,8 +6,8 @@
   {% for block in section.blocks %}
 
   <div class="testimonial col-sm-3 mb-4 px-4 text-center">
-    <a class="d-block text-reset text-decoration-none" href="{{ block.settings.cta_url }}">
-      <img class="testimonial__logo img-fluid mb-3" loading="lazy" width="{{ block.settings.image.width }}" height="{{ block.settings.image.height }}" src="{{ block.settings.image | img_url: '400x300', scale: 2, crop: 'center' }}">
+    <a class="d-block text-reset text-decoration-none" href="{{ block.settings.cta_url }}" target="_blank" rel="noopener">
+      <img class="testimonial__logo img-fluid mb-3" loading="lazy" width="{{ block.settings.image.width }}" height="{{ block.settings.image.height }}" src="{{ block.settings.image | img_url: '400x300', scale: 2, crop: 'center' }}" alt="{{ block.settings.image.alt | escape }}">
       <p class="testimonial__quote"><q>{{ block.settings.quote }}</q> <cite class="text-decoration-underline">{{ block.settings.publication }}</cite></p>
     </a>
   </div>
