--- a/snippets/linklist-navlink.liquid
+++ b/snippets/linklist-navlink.liquid
@@ -1,9 +1,10 @@
+{% assign show_levels = levels | default: 3 %}
 
 <ul class="nav flex-column">
   {% for link_lv1 in list.links %}
     <li class="nav-item">
       <a class="nav-link" aria-current="page" href="{{ link_lv1.url }}">{{ link_lv1.title }}</a>
-      {% if link_lv1.links.size > 0 %}
+      {% if link_lv1.links.size > 0 and show_levels > 0 %}
         <ul class="nav flex-column ms-3">
           {% for link_lv2 in link_lv1.links %}
             <li class="nav-item">
